# ros2-whisker-slam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bubble.ttt  main.cpp  mapper_params_online_async.yaml  mapping.rviz  nav2_params.yaml  package.xml
resuls/: .gitignore  comparison.xcf  evaluate.m  ground_truth.pgm  ground_truth.yaml  ground_truth_corrected.pgm  ground_truth_corrected_crop.pgm  ground_truth_crop.pgm  hardware_eval.ipynb  results  whisker.pgm  whisker.yaml  whisker_bk.pgm  whisker_bk.yaml
resuls/.ipynb_checkpoints/: results-checkpoint
src/: CMakeLists.txt  cumulative_err_pos.hpp  simple_controller.hpp  simple_mapper.hpp
